--- a/app/templates/account/identify.twig
+++ b/app/templates/account/identify.twig
@@ -3,7 +3,7 @@
 {% set title = 'Identification required'|trans %}
 
 {% block content %}
-<div class="jumbotron">
+<div class="jumbotron" id="identify">
 	<div class="container">
 		<h1>{{ title }}</h1>
 		<p>{% trans %}Please enter your password to confirm your identity:{% endtrans %}</p>
