--- a/app/templates/generic/hero.twig
+++ b/app/templates/generic/hero.twig
@@ -1,10 +1,12 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<div class="hero-unit">
+<div class="jumbotron">
+	<div class="container">
 	{% if title %}<h1>{{ title }}</h1>{% endif %}
 	{% if description %}<p>{{ description }}</p>{% endif %}
 	{% if raw %}{{ raw|raw }}{% endif %}
-	<p><a class="btn btn-primary btn-large" href="{{ base }}">{% trans "Return to home"%}</a></p>
+		<p><a class="btn btn-primary btn-large" href="{{ base }}">{% trans "Return to home"%}</a></p>
+	</div>
 </div>
 {% endblock %}
