--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -19,6 +19,37 @@ a.text {
 	margin-bottom: 0px;
 }
 
+.container#front {
+	margin-top: 40px;
+}
+
+
+#front .carousel {
+	height: 417px;
+}
+
+footer {
+	margin-top: 20px;
+}
+
+footer span, footer span a {
+	display: inline;
+}
+
+.muted, .muted a {
+	color: gray;
+}
+
+#site-notice {
+	padding: 15px;
+	margin-bottom: 0px;
+}
+
+#identify.jumbotron {
+	margin-top: 40px;
+	padding: 20px 0 50px 0;
+}
+
 /* IE fixes */
 
 @-webkit-viewport   { width: device-width; }
