--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -1,47 +1,50 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<img src="{{base}}/img/game/{{short}}.png" class="pull-right hidden-phone">
-<div class="page-header">
-	<h1>{{ title }}</h1>
-</div>
+<div class="container">
+	<div class="page-header">
+		<img src="{{base}}/img/game/{{short}}.png" class="pull-right hidden-xs">
+		<h1>{{ title }}</h1>
+		<div class="clearfix"></div>
+	</div>
 {% if addons %}
-<div class="sort-bar">{% trans %}Sort{% endtrans %}
-	<a href="{{filename}}?sort=date{% if sort == 'date' and not reverse %}&reverse=1{% endif %}">{% trans %}by date{% endtrans %}</a>{% if sort == 'date' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
-	<a href="{{filename}}?sort=title{% if sort == 'title' and not reverse %}&reverse=1{% endif %}">{% trans %}by name{% endtrans %}</a>{% if sort == 'title' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
-	<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
-	or <a href="{{base}}/publish/?for={{short}}">create a new addon</a> for this game.
-</div>
-<ul class="media-list addons">
+	<div class="sort-bar">{% trans %}Sort{% endtrans %}
+		<a href="{{filename}}?sort=date{% if sort == 'date' and not reverse %}&reverse=1{% endif %}">{% trans %}by date{% endtrans %}</a>{% if sort == 'date' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
+		<a href="{{filename}}?sort=title{% if sort == 'title' and not reverse %}&reverse=1{% endif %}">{% trans %}by name{% endtrans %}</a>{% if sort == 'title' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %} |
+		<a href="{{filename}}?sort=rating{% if sort == 'rating' and not reverse %}&reverse=1{% endif %}">{% trans %}by rating{% endtrans %}</a>{% if sort == 'rating' %} {% if reverse%}▲{% else %}▼{% endif %}{% endif %}
+		or <a href="{{base}}/publish/?for={{short}}">create a new addon</a> for this game.
+	</div>
+	<ul class="media-list addons">
 {% for addon in addons %}
-	<li class="media">
-		<div class="pull-left">
-			<a href="{{filename}}/{{addon.short}}">
-				<img class="media-object" src="http://placehold.it/200x150">
-			</a>
-		</div>
-		<div class="media-body">
-			<h4 class="media-heading"><a href="{{filename}}/{{addon.short}}">{{ addon.title }}</a></h4>
-			<p class="hidden-phone">
+		<li class="media">
+			<div class="pull-left">
+				<a href="{{filename}}/{{addon.short}}">
+					<img class="media-object" src="http://placehold.it/200x150">
+				</a>
+			</div>
+			<div class="media-body">
+				<h4 class="media-heading"><a href="{{filename}}/{{addon.short}}">{{ addon.title }}</a></h4>
+				<p class="hidden-phone">
 				{% if addon.description %}
 					{{addon.description}}
 				{% else %}
 					<em>{% trans %}This addon has no description.{% endtrans %}</em>
 				{% endif %}
-			</p>
-			<p class="hidden-phone">
-				<a href="{{filename}}/{{addon.short}}" class="btn">{% trans %}Addon page{% endtrans %}</a>
-				<a href="{{base}}/download/{{short}}/{{addon.short}}" class="btn btn-primary">{% trans %}Download{% endtrans %}</a>
-				<!--<a href="#" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a>!-->
-			</p>
-		</div>
-	</li>
+				</p>
+				<p class="hidden-phone">
+					<a href="{{filename}}/{{addon.short}}" class="btn">{% trans %}Addon page{% endtrans %}</a>
+					<a href="{{base}}/download/{{short}}/{{addon.short}}" class="btn btn-primary">{% trans %}Download{% endtrans %}</a>
+					<!--<a href="#" class="btn btn-info">{% trans %}Edit addon{% endtrans %}</a>!-->
+				</p>
+			</div>
+		</li>
 {% endfor %}
-</ul>
+	</ul>
 {% else %}
 {% set create_addon_text = 'create a new addon'|trans	%}
 {% set create_addon = '<a href="' ~ base ~ '/publish/?for='~ short ~ '">' ~ create_addon_text ~ '</a>' %}
-<p><strong>{% trans %}Would you like to {{created_addon}} for this game?{% endtrans %}</strong></p>
-<p class="alert alert-warning">{% trans %}There are no addons available for this game.{% endtrans %}</p>
+	<p><strong>{% trans %}Would you like to {{created_addon}} for this game?{% endtrans %}</strong></p>
+	<p class="alert alert-warning">{% trans %}There are no addons available for this game.{% endtrans %}</p>
 {% endif %}
+</div>
 {% endblock %}
