--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -14,18 +14,21 @@
 	</head>
 	<body>{% block body %}
 		{% include 'functions/navbar.twig' %}
-		<div class="container">
+		{% if site_notice %}
+		<div id="site-notice" class="jumbotron alert-danger">
+			<div class="container">		
+		{{site_notice}}
+			</div>
+		</div>
+		{% endif %}
 		{% block content %}
+		<div class="container">
+		</div>
 		{% endblock %}
-			<hr>
+		<div class="container">
 			<footer>
 				<p class="visible-xs">&uarr; <a href="#">{% trans %}Back to top{% endtrans %}</a></p>
-			{% if site_notice %}<p><strong>{{site_notice}}</strong></p>{% endif %}
-				<p>
-					<a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}
-					<span class="muted"> ·
-						<a class="text" href="{{base}}/about">{% trans "About the project" %}</a>
-						· <a class="text" href="{{base}}/contact"><span class="visible-xs">{% trans "Contact" %}</span><span class="hidden-phone">{% trans "Contact us" %}</span></a><span class="hidden-phone">{% if site_trademark %} · {{site_trademark|raw}}{% endif %}</span></span>.</p>
+				<p><a class="text" href="{{base}}">{{brand}}</a> {{site_copyright}}<span class="muted"> · <a class="text" href="{{base}}/about">{% trans "About us" %}</a> · <a class="text" href="{{base}}/contact"><span>{% trans "Contact" %}</span></a></span></p>
 			</footer>
 		</div>
 	{% endblock %}
