--- a/app/templates/site/front.twig
+++ b/app/templates/site/front.twig
@@ -1,48 +1,43 @@
 {% extends 'root.twig' %}
 
 {% block content %}
-<div class="row">
-	<div class="col-md-8">
-		<!--<div style="height: 400px; background-color: #ddd; padding: 50px;">
-			<h1 style="margin-top: 350px">CMC 1.5!</h1>
-		</div>!-->
-
-		<div id="featured-front" class="carousel slide">
-			<ol class="carousel-indicators">
-				<li data-target="#featured-front" data-slide-to="0" class="active"></li>
-				<li data-target="#featured-front" data-slide-to="1"></li>
-			</ol>
-			<div class="carousel-inner">
-				<!--<div class="active item">
-					<a href="{{base}}/addons/rage/moderncombat">
-						<img src="{{base}}/img/cmc.png" alt>
-					</a>
-					<div class="carousel-caption">
-						<h4>Now available: Codename: Modern Combat R1.5</h4>
-						<p>The Hazard-based strategic shooter is back with its newest version. <a href="{{base}}rage/addon/moderncombat">Learn more&hellip;</a></p>
-                    </div>
-				</div>!-->
-				<div class="item active">
-					<a href="http://clonkforge.net/pr.php?pr=1454">
-						<img src="{{base}}/img/infinity.png" alt="Clonk Infinity">
-					</a>
-					<div class="carousel-caption">
-						<h4 class="heading-label">Soon on Lorry: Clonk Infinity</h4>
-						<a href="{{base}}/addons/rage" class="label label-game label-rage">Clonk Rage</a>
-						<p>Basefights in the skylands and georgious graphics: Clonk Infinity is nearing completion.</p>
-                    </div>
+<div class="container" id="front">
+	<div class="row">
+		<div class="col-md-8">
+			<div id="featured-front" class="carousel slide" data-ride="carousel">
+				<ol class="carousel-indicators">
+					<li data-target="#featured-front" data-slide-to="0" class="active"></li>
+					<li data-target="#featured-front" data-slide-to="1"></li>
+					<li data-target="#featured-front" data-slide-to="2"></li>
+				</ol>
+				<div class="carousel-inner">
+					<div class="item active">
+						<a href="{{base}}/about">
+							<img src="http://placehold.it/900x500/77/00&text=Lorry" alt="Lorry">
+						</a>
+						<div class="carousel-caption">
+							<h3><strong>This is Lorry:</strong> Welcome back to Clonk.</h3>
+						</div>
+					</div>
+					<div class="item">
+						<a href="{{base}}/addons/rage/moderncombat">
+							<img src="http://placehold.it/900x500/77/00&text=CMC" alt="Codename: Modern Combat">
+						</a>
+						<div class="carousel-caption">
+							<h3>Now available: <strong>Codename: Modern Combat R1.6</strong></h3>
+						</div>
+					</div>
 				</div>
+				<a class="left carousel-control" href="#featured-front" data-slide="prev">
+					<span class="glyphicon glyphicon-chevron-left"></span>
+				</a>
+				<a class="right carousel-control" href="#featured-front" data-slide="next">
+					<span class="glyphicon glyphicon-chevron-right"></span>
+				</a>
 			</div>
-			<a class="left carousel-control" href="#featured-front" data-slide="prev">
-				<span class="icon-prev"></span>
-			</a>
-			<a class="right carousel-control" href="#featured-front" data-slide="next">
-				<span class="icon-next"></span>
-			</a>
-		</div>
-		<h3><span class="hidden-xs">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-xs">{% trans %}New releases{% endtrans %}</span></h3>
+			<h3><span class="hidden-xs">{% trans %}New releases on Lorry{% endtrans %}</span><span class="visible-xs">{% trans %}New releases{% endtrans %}</span></h3>
 		{% if new_addons %}
-		<ul class="media-list addons-small">
+			<ul class="media-list addons-small">
 			{% for addon in new_addons %}
 				<li class="media">
 					<div class="pull-left">
@@ -55,41 +50,42 @@
 							{% if addon.description %}
 								{{addon.description}}
 							{% else %}
-								<em>{% trans %}This addon has no description.{% endtrans %}</em>
+							<em>{% trans %}This addon has no description.{% endtrans %}</em>
 							{% endif %}
-							</p>
-						</div>
-					</li>
+						</p>
+					</div>
+				</li>
 			{% endfor %}
-				</ul>
+			</ul>
 		{% else %}
-				<p class="alert alert-warning">{% trans %}There are no new releases.{% endtrans %}</p>
+			<p class="alert alert-warning">{% trans %}There are no new releases.{% endtrans %}</p>
 		{% endif %}
-			</div>
-			<div class="col-md-4">
-		{% if user_login %}
-				<h1>{% trans %}Welcome back.{% endtrans %}</h1>
-		{% else %}
-				<h2><span class="hidden-xs">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-xs">{% trans %}Welcome{% endtrans %}</span></h2>
-		{% endif %}
-				<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
-				<p>
-					<a href="{{base}}/clonk" class="btn btn-success">{% trans %}New to Clonk?{% endtrans %}</a>
-					<a href="{{base}}/about" class="btn btn-default">{% trans %}About Lorry{% endtrans %}</a>
-				</p>
-				<h1>Spotlight</h1>
-				<img src="http://clonkspot.org/images/logo.png" alt="clonkspot" style="height: 69px; width: 248px; margin-bottom: 12px;">
-				<p class="text-big">Clonkspot is a community platform introducing Clonk and features a blog and discussion board about various aspects of the games.</p>
-				<p>
-					<a href="http://clonkspot.org" class="btn btn-info">{% trans %}Visit clonkspot.org{% endtrans %}</a>
-					<a href="{{base}}/community" class="btn btn-default">{% trans %}List of community sites{% endtrans %}</a>
-				</p>
-				<hr>
-				<h3>{% trans %}Addons of the week{% endtrans %}</h3>
-				<ul>
-					<li>Lorry</li>
-					<li>Clonk Infinity</li>
-				</ul>
-			</div>
 		</div>
+		<div class="col-md-4">
+		{% if user_login %}
+			<h1>{% trans %}Welcome back.{% endtrans %}</h1>
+		{% else %}
+			<h2><span class="hidden-xs">{% trans %}Welcome to Lorry.{% endtrans %}</span><span class="visible-xs">{% trans %}Welcome{% endtrans %}</span></h2>
+		{% endif %}
+			<p class="text-big">{% trans %}Lorry is the place to find out about and get the best addons for the game series Clonk, and to discuss all about your favourites with the community.{% endtrans %}</p>
+			<p>
+				<a href="{{base}}/clonk" class="btn btn-success">{% trans %}New to Clonk?{% endtrans %}</a>
+				<a href="{{base}}/about" class="btn btn-default">{% trans %}About Lorry{% endtrans %}</a>
+			</p>
+			<h1>Spotlight</h1>
+			<img src="http://clonkspot.org/images/logo.png" alt="clonkspot" style="height: 69px; width: 248px; margin-bottom: 12px;">
+			<p class="text-big">Clonkspot is a community platform introducing Clonk and features a blog and discussion board about various aspects of the games.</p>
+			<p>
+				<a href="http://clonkspot.org" class="btn btn-info">{% trans %}Visit clonkspot.org{% endtrans %}</a>
+				<a href="{{base}}/community" class="btn btn-default">{% trans %}List of community sites{% endtrans %}</a>
+			</p>
+			<hr>
+			<h3>{% trans %}Addons of the week{% endtrans %}</h3>
+			<ul>
+				<li>Lorry</li>
+				<li>Clonk Infinity</li>
+			</ul>
+		</div>
+	</div>
+</div>
 {% endblock %}
