--- a/app/templates/manage/administration.twig
+++ b/app/templates/manage/administration.twig
@@ -3,19 +3,21 @@
 {% set title = 'Administration'|trans %}
 
 {% block content %}
-<div class="page-header">
-	<h1>{{ title }}</h1>
-</div>
-<div class="row">
-	<div class="col-md-4">
-		<h2>{% trans %}Overview{% endtrans %}</h2>
-		<h3>{% trans %}Management{% endtrans %}</h3>
-		<a href="{{base}}/users?filter=moderator" class="btn btn-primary">Show moderators</a>
+<div class="container">
+	<div class="page-header">
+		<h1>{{ title }}</h1>
 	</div>
-	<div class="col-md-4">
-		<h2>{% trans %}Front page{% endtrans %}</h2>
-		<h3>Carousel</h3>
-		<h3>Spotlight</h3>
+	<div class="row">
+		<div class="col-md-4">
+			<h2>{% trans %}Overview{% endtrans %}</h2>
+			<h3>{% trans %}Management{% endtrans %}</h3>
+			<a href="{{base}}/users?filter=moderators" class="btn btn-primary">Show moderators</a>
+		</div>
+		<div class="col-md-4">
+			<h2>{% trans %}Front page{% endtrans %}</h2>
+			<h3>Carousel</h3>
+			<h3>Spotlight</h3>
+		</div>
 	</div>
 </div>
 {% endblock %}
