--- a/app/templates/manage/moderation.twig
+++ b/app/templates/manage/moderation.twig
@@ -3,25 +3,27 @@
 {% set title = 'Moderation'|trans %}
 
 {% block content %}
-<div class="page-header">
-	<h1>{{ title }}</h1>
-</div>
-<div class="row">
-	<div class="col-md-4">
-		<h2>{% trans %}Overview{% endtrans %}</h2>
-		<h3>{% trans %}Users{% endtrans %}</h3>
-		<a href="{{base}}/users" class="btn btn-primary">Show all users</a>
-		<a href="{{base}}/users?filter=bans" class="btn">Show bans</a>
+<div class="container">
+	<div class="page-header">
+		<h1>{{ title }}</h1>
 	</div>
-	<div class="col-md-4">
-		<h2>{% trans %}Addons{% endtrans %}</h2>
-		<h3>{% trans %}Awaiting approval{% endtrans %}</h3>
-		<p class="alert alert-warning">{% trans %}There are no addons in the approval queue.{% endtrans %}</p>
-	</div>
-	<div class="col-md-4">
-		<h2>{% trans %}Contact form{% endtrans %}</h2>
-		<h3>{% trans %}Queue{% endtrans %}</h3>
-		<p class="alert alert-warning">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
+	<div class="row">
+		<div class="col-md-4">
+			<h2>{% trans %}Overview{% endtrans %}</h2>
+			<h3>{% trans %}Users{% endtrans %}</h3>
+			<a href="{{base}}/users" class="btn btn-default">Show all users</a>
+			<a href="{{base}}/users?filter=bans" class="btn btn-danger">Show bans</a>
+		</div>
+		<div class="col-md-4">
+			<h2>{% trans %}Addons{% endtrans %}</h2>
+			<h3>{% trans %}Awaiting approval{% endtrans %}</h3>
+			<p class="alert alert-warning">{% trans %}There are no addons in the approval queue.{% endtrans %}</p>
+		</div>
+		<div class="col-md-4">
+			<h2>{% trans %}Contact form{% endtrans %}</h2>
+			<h3>{% trans %}Queue{% endtrans %}</h3>
+			<p class="alert alert-warning">{% trans %}There are no new messages in the queue.{% endtrans %}</p>
+		</div>
 	</div>
 </div>
 {% endblock %}
