resize alerts on identification page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -50,6 +50,12 @@ footer span, footer span a {
 	padding: 20px 0 50px 0;
 }
 
+#identify .alert {
+	font-size: 0.8em;
+	padding: 5px 15px;
+	margin-bottom: 10px;
+}
+
 /* IE fixes */
 
 @-webkit-viewport   { width: device-width; }
