--- a/app/templates/account/identify.twig
+++ b/app/templates/account/identify.twig
@@ -8,7 +8,7 @@
 		<h1>{{ title }}</h1>
 		<p>{% trans %}Please enter your password to confirm your identity:{% endtrans %}</p>
 		{% include 'functions/alert.twig' with {'selector' : 'identify'} %}
-		<form id="form-identify" method="post" class="form-inline" action="{{ filename }}" role="form">
+		<form method="post" class="form-inline" action="{{ filename }}" role="form">
 			<div class="form-group">
 				<label class="sr-only" for="password">{% trans "Password" %}</label>
 				<input type="password" class="form-control" name="password" id="password" placeholder="{% trans "Password" %}" autofocus required>
