re-added head css for about page

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -56,6 +56,23 @@ footer span, footer span a {
 	margin-bottom: 10px;
 }
 
+.head img {
+	width: 32px;
+	height: 32px;
+	float: left;
+	margin-top: 5px;
+	margin-right: 10px;
+	border-radius: 16px;
+	-webkit-border-radius: 16px;
+	-moz-border-radius: 16px;
+	-webkit-transform-style: preserve-3d;
+	-webkit-transition: -webkit-transform 1s;
+}
+
+.head:hover img {
+	-webkit-transform: rotateY(360deg);
+}
+
 /* IE fixes */
 
 @-webkit-viewport   { width: device-width; }
