--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -45,9 +45,18 @@ footer span, footer span a {
 	margin-bottom: 0px;
 }
 
+.jumbotron {
+	padding: 30px 0 50px 0;
+}
+
+.jumbotron h1 {
+	font-size: 30px;
+	line-height: 1.1;
+}
+
 #identify.jumbotron {
 	margin-top: 40px;
-	padding: 20px 0 50px 0;
+	padding: 25px 0 50px 0;
 }
 
 #identify .alert {
@@ -67,6 +76,10 @@ footer span, footer span a {
 	-moz-border-radius: 16px;
 	-webkit-transform-style: preserve-3d;
 	-webkit-transition: -webkit-transform 1s;
+}
+
+ol.steps {
+
 }
 
 .head:hover img {
