--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -44,9 +44,9 @@
 </div>
 <div class="jumbotron">
 	<div class="container">
-		<h1>No addons available yet</h1>
+		<h1>{% trans %}No addons available yet{% endtrans %}</h1>
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
-		<p><a href="{{base}}/publish" class="btn btn-info">Visit the publishing portal</a></p>
+		<p><a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a></p>
 {% endif %}
 	</div>
 </div>
