--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -78,8 +78,8 @@ footer span, footer span a {
 	-webkit-transition: -webkit-transform 1s;
 }
 
-ol.steps {
-
+.jumbo-image {
+	margin-top: 20px;
 }
 
 .head:hover img {
