--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -3,7 +3,7 @@
 {% set title = 'Publish'|trans %}
 
 {% block content %}
-<div class="container">
+<!--<div class="container">
 	<div class="page-header">
 		<h1>{{ title }}</h1>
 	</div>
@@ -75,6 +75,20 @@
 		{% endif %}
 		</div>
 	</div>
+</div>!-->
+<div class="container">
+	<div class="page-header">
+		<h1>{{ title }}</h1>
+	</div>
+</div>
+<div class="jumbotron">
+	<div class="container">
+		<h2>Welcome to the publishing portal!</h2>
+		<p>Here you can publish your addons and make them available to your fans. Click the button below to get started.</p>
+		<p><a href="#" class="btn btn-success">Create a new addon</a></p>
+	</div>
+</div>
+<div class="container">
 </div>
 {% endblock %}
 
