--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -27,7 +27,7 @@
 					<label for="password-repeat">{% trans "Confirm password" %}</label>
 					<input type="password" class="form-control" name="password-repeat" id="password-repeat" placeholder="{% trans "Confirm password" %}" title="{% trans %}Please repeat your password to ensure you have spellt it correctly.{% endtrans %}" required>
 				</div>
-				<button class="btn btn-large btn-primary" type="submit">{% trans "Register" %}</button>
+				<button class="btn btn-large btn-success" type="submit">{% trans "Register" %}</button>
 				<a href="{{base}}/login" class="btn btn-link">{% trans "Already registered?" %}</a>
 			</form>
 			<hr>
@@ -40,7 +40,7 @@
 			<hr class="visible-xs">
 			<h3>{% trans %}What is this all about?{% endtrans %}</h3>
 			<p>
-				<a href="{{base}}/about" class="btn btn-success">{% trans %}About Lorry{% endtrans %}</a>
+				<a href="{{base}}/about" class="btn btn-info">{% trans %}About Lorry{% endtrans %}</a>
 				<a href="{{base}}/clonk" class="btn">{% trans %}New to Clonk?{% endtrans %}</a>
 			</p>
 			<hr>
