--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -7,10 +7,15 @@
 	<div class="page-header">
 		<h1>{{ title }} <small>{{version}}</small></h1>
 	</div>
-	<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
-	<p>
-		<a href="{{base}}/register" class="btn btn-success btn-phone-block btn-large">{% trans %}Register now{% endtrans %}</a>
-		<a href="{{base}}/login" class="btn btn-default btn-phone-block btn-large">{% trans %}Login{% endtrans %}</a>
-	</p>
+</div>
+<div class="jumbotron">
+	<div class="container">
+		<h2>This is the publishing portal</h2>
+		<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
+		<p>
+			<a href="{{base}}/register" class="btn btn-success btn-lg">{% trans %}Register now{% endtrans %}</a>
+			<a href="{{base}}/login" class="btn btn-primary btn-lg">{% trans %}Login{% endtrans %}</a>
+		</p>
+	</div>
 </div>
 {% endblock %}
