tidy up the about pages

--- a/app/style/lorry.less
+++ b/app/style/lorry.less
@@ -36,10 +36,6 @@ footer span, footer span a {
 	display: inline;
 }
 
-.muted, .muted a {
-	color: gray;
-}
-
 #site-notice {
 	padding: 15px;
 	margin-bottom: 0px;
@@ -84,6 +80,10 @@ footer span, footer span a {
 
 .head:hover img {
 	-webkit-transform: rotateY(360deg);
+}
+
+dt {
+	margin-top: 8px;
 }
 
 /* IE fixes */
