--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -13,7 +13,7 @@
 			<h3>{% trans %}Fan page{% endtrans %}</h3>
 			<p>{% trans %}We're here as the fans of Clonk. We built this site as members of the community for "our" game.{% endtrans %}</p>
 			<p>{% trans %}This site is for new players to learn all about Clonk, to discover the huge database of addons and to help them get right into the game.{% endtrans %}</p>
-			<p><a href="{{base}}/clonk" class="btn btn-info">{% trans "Learn all about Clonk" %}</a></p>
+			<p><a href="{{base}}/clonk" class="btn btn-info">{% trans "Learn about Clonk" %}</a></p>
 		</div>
 		<div class="col-md-4">
 			<hr class="visible-xs">
@@ -40,18 +40,18 @@
 				<dt><a href="http://php.net">PHP</a></dt>
 				<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
 				<dt><a href="http://twig.sensiolabs.org">Twig</a></dt>
-				<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and his <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
+				<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
 				<dt><a href="http://lesscss.org/">LESS CSS</a></dt>
 				<dd>using <a href="http://leafo.net/lessphp/">lessphp</a> built by <a href="http://twitter.com/fat">@moonscript</a>,</dd>
-				<dt><a href="http://twitter.github.com/bootstrap">Bootstrap</a></dt>
-				<dd>by <a href="http://twitter.com/mda">@mda</a> and <a href="http://twitter.com/fat">@fat</a>.</dd>
+				<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
+				<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and contributors.</dd>
 			</dl>
 		</div>
 		<div class="col-md-4">
 			<hr class="visible-xs">
 			<h3>{% trans "Resources" %}</h3>
 			<dl>
-				<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="muted">(background)</span></dt>
+				<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background)</span></dt>
 				<dd>by <a href="http://lukemcdonald.com/">Luke McDonald</a> via <a href="http://subtlepatterns.com/">Subtle Patterns</a>,</dd>
 				<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
 				<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
@@ -67,8 +67,8 @@
 				<dd>{% trans %}early feedback and thoughts{% endtrans %},</dd>
 				<br>
 				<div class="head">
-					<dt><a href="https://beheh.de"><img src="{{base}}/img/benedict.png">Benedict Etzel</a> <span class="muted">(<a href="{{base}}/users/B_E" class="muted">B_E</a>)</span></dt>
-					<dd>{% trans %}idea &amp; development{% endtrans %}.</dd>
+					<dt><a href="https://beheh.de"><img src="{{base}}/img/benedict.png">Benedict Etzel</a> <span class="text-muted">(<a href="{{base}}/users/B_E" class="text-muted">B_E</a>)</span></dt>
+					<dd>{% trans %}idea and development{% endtrans %}.</dd>
 				</div>
 			</dl>
 		</div>
