update login and register pages

--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -38,15 +38,16 @@
 		</div>
 		<div class="col-md-8">
 			<hr class="visible-xs">
-			<h3>{% trans %}What is this all about?{% endtrans %}</h3>
+			<h2>{% trans %}This is Lorry.{% endtrans %}</h2>
+			<p>Lorry is a fan page, distribution platform and online community for players of Clonk games.</p>
 			<p>
 				<a href="{{base}}/about" class="btn btn-info">{% trans %}About Lorry{% endtrans %}</a>
-				<a href="{{base}}/clonk" class="btn">{% trans %}New to Clonk?{% endtrans %}</a>
+				<a href="{{base}}/clonk" class="btn btn-default">{% trans %}New to Clonk?{% endtrans %}</a>
 			</p>
 			<hr>
 			<h3>{% trans %}Why should I register?{% endtrans %}</h4>
-				<p>{% trans %}After registering you can instantly upload your own extensions, comment and vote on existing contributions.{% endtrans %}</p>
-				<p>{% trans %}You become part of a small and friendly community, enjoying the game and devoting their time to it.{% endtrans %}</p>
+				<p>{% trans %}After registering you can upload your own addons as well as comment and vote on existing contributions.{% endtrans %}</p>
+				<p>{% trans %}You'll become part of a small and friendly community, enjoying the game and devoting their time to it.{% endtrans %}</p>
 		</div>
 	</div>
 </div>
