--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -39,7 +39,7 @@
 		<div class="col-md-8">
 			<hr class="visible-xs">
 			<h2>{% trans %}This is Lorry.{% endtrans %}</h2>
-			<p>Lorry is a fan page, distribution platform and online community for players of Clonk games.</p>
+			<p>{% trans %}Lorry is a fan page, distribution platform and online community for players of Clonk games.{% endtrans %}</p>
 			<p>
 				<a href="{{base}}/about" class="btn btn-info">{% trans %}About Lorry{% endtrans %}</a>
 				<a href="{{base}}/clonk" class="btn btn-default">{% trans %}New to Clonk?{% endtrans %}</a>
