--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -51,9 +51,9 @@
 			<p>{% trans %}Nice to see you again! Have you visited these other great Clonk sites yet?{% endtrans %}</p>
 			<p><a href="http://openclonk.org">openclonk.org</a> &middot; <a href="http://clonkspot.org">clonkspot.org</a> &middot; <a href="http://clonkspot.org">clonkforge.net</a></p>
 			<hr>
-			<h3>No account yet?</h3>
-			<p>Registering takes only a few moments and allows you to participate in the Clonk community.</p>
-			<p><a href="{{base}}/register" class="btn btn-success">Register now</a></p>
+			<h3>{% trans %}No account yet?{% endtrans %}</h3>
+			<p>{% trans %}Registering takes only a few moments and allows you to participate in the Clonk community.{% endtrans %}</p>
+			<p><a href="{{base}}/register" class="btn btn-success">{% trans %}Register now{% endtrans %}</a></p>
 		</div>
 	</div>
 </div>
