--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -68,7 +68,7 @@
 				<br>
 				<div class="head">
 					<dt><a href="https://beheh.de"><img src="{{base}}/img/benedict.png">Benedict Etzel</a> <span class="text-muted">(<a href="{{base}}/users/B_E" class="text-muted">B_E</a>)</span></dt>
-					<dd>{% trans %}idea and development{% endtrans %}.</dd>
+					<dd>{% trans %}idea & development{% endtrans %}.</dd>
 				</div>
 			</dl>
 		</div>
