--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -46,7 +46,7 @@
 		<a href="#"><img src="{{base}}/img/game/{{short}}.png" class="pull-right jumbo-image hidden-xs"></a>
 		<h1>{% trans %}No addons available{% endtrans %}</h1>
 		<p>{% trans %}There are no addons available for this game yet.{% endtrans %}</p>
-		<p><a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a></p>
+		{% if user_login %}<p><a href="{{base}}/publish" class="btn btn-info">{% trans %}Visit the publishing portal{% endtrans %}</a></p>{% endif %}
 {% endif %}
 	</div>
 </div>
