--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -83,9 +83,9 @@
 </div>
 <div class="jumbotron">
 	<div class="container">
-		<h2>Welcome to the publishing portal!</h2>
-		<p>Here you can publish your addons and make them available to your fans. Click the button below to get started.</p>
-		<p><a href="#" class="btn btn-success">Create a new addon</a></p>
+		<h2>{% trans %}Welcome to the publishing portal!{% endtrans %}</h2>
+		<p>{% trans %}Here you can publish your addons and make them available to your fans. Click the button below to get started.{% endtrans %}</p>
+		<p><a href="#" class="btn btn-success">{% trans %}Create a new addon{% endtrans %}</a></p>
 	</div>
 </div>
 <div class="container">
