--- a/app/templates/publish/greeter.twig
+++ b/app/templates/publish/greeter.twig
@@ -10,7 +10,7 @@
 </div>
 <div class="jumbotron">
 	<div class="container">
-		<h2>This is the publishing portal</h2>
+		<h2>{% trans %}This is the publishing portal{% endtrans %}</h2>
 		<p>{% trans %}After registering you can easily publish your addons here and distribute them via Lorry.{% endtrans %}</p>
 		<p>
 			<a href="{{base}}/register" class="btn btn-success btn-lg">{% trans %}Register now{% endtrans %}</a>
