--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,7 +3,7 @@
 {% block content %}
 <div class="container">
 	<div class="page-header">
-		<h1>{{ title }}</h1>
+		<h1>{{ title }} <small>{% trans %}Game{% endtrans %}</small></h1>
 		<div class="clearfix"></div>
 	</div>
 {% if addons %}
