--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -12,12 +12,14 @@
 			<h2>{% trans %}We &hearts; feedback{% endtrans %}</h2>
 			<p>{% trans %}We here are all fans of Clonk. We built this site as members of our community for the game and want to do our best.{% endtrans %}</p>
 			<p>{% trans %}If you have any wishes or should encounter any problem, do not hesitate to contact us:{% endtrans %}</p>
-			<form method="post" id="form-contact">
-				<textarea required rows="6"></textarea>
+			<form method="post">
+				<div class="form-group">
+					<textarea class="form-control" rows="6" required></textarea>
+				</div>
 				<button class="btn btn-primary" type="submit">{% trans "Send feedback" %}</button>
 			{% if by %}
 				{% set sender = by|escape('html') %}
-				<span class="btn btn-link" disabled>{% trans %}Sending as {{sender}}.{% endtrans %}</span>
+				<span class="btn "disabled>{% trans %}Sending as {{sender}}.{% endtrans %}</span>
 			{% endif %}
 			</form>
 		</div>
